--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     box-sizing: boder-box;
     font-family: "Open Sans", sans-serif;
     color: white;
+    font font-weight: 600;
 }
 
 body{
@@ -28,6 +29,12 @@ body::before{
     backdrop-filter: blur(2px);
 }
 
+/* Utilities */
+.regular-txt{
+    font-weight: 400;
+}
+/* End Utilities */
+
 .main-container{
     border: solid;
     width: 300px;
@@ -40,6 +47,11 @@ body::before{
 }
 
 /* Input Container */
+.input-container{
+    position: relative;
+    margin-bottom: 25px;
+}
+
 .city-input{
     position: absolute;
     width: 280px;
@@ -63,8 +75,8 @@ body::before{
 
 .search-btn{
     position: absolute;
-    top: 55px;
-    left: 450px;
+    top: 8px;
+    left: 260px;
     /* transform: translateY(-50%); */
     background: none;
     display: flex;
@@ -72,3 +84,122 @@ body::before{
     cursor: pointer;
 }
 /* End Container */
+
+/* Section: Weather Info */
+.weather-info{
+    /* border: solid; */
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.location-date-container{
+    margin-top: 30px;
+    /* border: solid blue; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.location{
+    margin-top: 30px;
+    /* border: solid green; */
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+
+.weather-summary-container{
+    /* border: solid; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.weather-summary-img{
+    /* border: solid; */
+    width: 120px;
+    height: 120px;
+}
+
+.weather-summary-info{
+    text-align: end;
+}
+
+.weather-conditions-container{
+    /* border: solid; */
+    display: flex;
+    justify-content: space-between;
+}
+
+.condition-item{
+    /* border: solid; */
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.condition-item span{
+    font-size: 30px;
+}
+
+.forecast-items-container{
+    display: flex;
+    gap: 15px;
+    overflow: scroll;
+    padding-bottom: 12px;
+}
+
+.forecast-items-container::-webkit-scrollbar{
+    height: 8px;
+}
+
+.forecast-items-container::-webkit-scrollbar-track{
+    background: rgb(0, 0, 0, 0.1);
+    border-radius: 99px;
+}
+
+.forecast-items-container::-webkit-scrollbar-thumb{
+    background: rgb(0, 0, 0, 0.15);
+    border-radius: 99px;
+}
+
+.forecast-item{
+    /* border: solid; */
+    min-width: 70px;
+    background: rgb(255, 255,255,0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 10px;
+    align-items: center;
+    border-radius: 12px;
+    transition: 0.3s background;
+}
+
+.forecast-item:hover{
+    background: rgb(255, 255,255,0.15);
+}
+
+.forecast-item-img{
+    width: 35px;
+    height: 35px;
+}
+/* Ending: Weather Info */
+
+/* Section: Message */
+.message-img{
+    height: 200px;
+    width: fit-content;
+}
+
+.section-message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 15px;
+    margin-top: 25%;
+}
+/* End Section: Message */
