--- a/style.css
+++ b/style.css
@@ -12,19 +12,20 @@
 body{
     background-image: url(img/back_ground.jpg);
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 body::before{
     content: "";
     position: absolute;
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
     /* background: rgb(0, 0, 0.0); */
     backdrop-filter: blur(2px);
 }
@@ -38,7 +39,7 @@ body::before{
 .main-container{
     border: solid;
     width: 300px;
-    height: 496px;
+    height: 500px;
     z-index: 1;
     background: linear-gradient(to top,rgb(0, 0, 0.15),
     rgb(255, 255,255,0.15));
@@ -94,7 +95,7 @@ body::before{
 }
 
 .location-date-container{
-    margin-top: 30px;
+    margin-top: 20px;
     /* border: solid blue; */
     display: flex;
     justify-content: space-between;
@@ -124,7 +125,7 @@ body::before{
 }
 
 .weather-summary-info{
-    text-align: end;
+    text-align: right;
 }
 
 .weather-conditions-container{
@@ -144,11 +145,14 @@ body::before{
     font-size: 30px;
 }
 
+
+/* Forecast Container */
 .forecast-items-container{
     display: flex;
     gap: 15px;
-    overflow: scroll;
+    overflow: auto;
     padding-bottom: 12px;
+    justify-content: space-between;
 }
 
 .forecast-items-container::-webkit-scrollbar{
@@ -164,6 +168,9 @@ body::before{
     background: rgb(0, 0, 0, 0.15);
     border-radius: 99px;
 }
+
+
+/* Forecast item styling */
 
 .forecast-item{
     /* border: solid; */
@@ -186,9 +193,16 @@ body::before{
     width: 35px;
     height: 35px;
 }
+
+.forecast-item h5{
+    font-size: 14px;
+    margin: 0; /* Remove margins around forecast text */
+}
+
 /* Ending: Weather Info */
 
 /* Section: Message */
+
 .message-img{
     height: 200px;
     width: fit-content;
